@@ -1,5 +1,6 @@
 == master
 
+* Fix plural scope names being incorrect for DataMapper 0.9.4 - 0.9.6
 * Fix deprecation warnings for ruby-graphviz 0.9.0+
 * Add support for ActiveRecord 2.0.*
 * Fix nil states being overwritten when they're explicitly set in ORM integrations
